# adventofcode2024

./: Cargo.toml
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day09/: Cargo.toml  input.txt.age
day09/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml  input.txt.age
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml
day14/src/: lib.rs
day15/: Cargo.toml
day15/src/: lib.rs
day16/: Cargo.toml
day16/src/: lib.rs
day17/: Cargo.toml
day17/src/: lib.rs
day18/: Cargo.toml
day18/src/: lib.rs
day19/: Cargo.toml
day19/src/: lib.rs
day20/: Cargo.toml
day20/src/: lib.rs
day21/: Cargo.toml
day21/src/: lib.rs
day22/: Cargo.toml
day22/src/: lib.rs
day23/: Cargo.toml
day23/src/: lib.rs
day24/: Cargo.toml
day24/src/: lib.rs
day25/: Cargo.toml
day25/src/: lib.rs
meta/: Cargo.toml
meta/src/: lib.rs  main.rs
