[workspace]

members = [
    "day01",
    "day02",
    # "day03",
    # "day04",
    # "day05",
    # "day06",
    # "day07",
    # "day08",
    # "day09",
    # "day10",
    # "day11",
    # "day12",
    # "day13",
    # "day14",
    # "day15",
    # "day16",
    # "day17",
    # "day18",
    # "day19",
    # "day20",
    # "day21",
    # "day22",
    # "day23",
    # "day24",
    # "day25",
    "meta",
]
resolver = "2"


[workspace.dependencies]
aoc-traits = { git = "https://github.com/dkales/adventofcode2023-leaderboard", rev = "ac544663758c2dca2ee892fd7ab59419999350dc" }
